# rust-gmail

./: Cargo.toml  README.md  Readme.md
src/: error.rs  lib.rs  send_email.rs  service_account.rs  token.rs
src/async_impl/: send_email.rs  token.rs
src/blocking/: mod.rs  send_email.rs  token.rs
src/common/: send_email.rs  token.rs
