[package]
name = "rust-gmail"
description = "A simple crate to send emails using the Gmail API"
version = "0.2.1"
edition = "2021"
keywords = ["gmail", "email"]
categories = ["email"]
homepage = "https://github.com/viddem/rust-gmail"
repository = "https://github.com/viddem/rust-gmail"
documentation = "https://docs.rs/rust-gmail"
authors = ["Vidar Magnusson <rust-gmail@vidarmagnusson.com>"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
jwt = { version = "0.16", features = ["openssl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.13"

[features]
blocking = ["reqwest/blocking"]
